kolchi khas ghi logha t9ad

--- a/Delivery man app/android/app/src/main/AndroidManifest.xml
+++ b/Delivery man app/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.sixamtech.sixam_mart_delivery_app"
+    package="com.clicktoget.delivery_app"
     xmlns:tools="http://schemas.android.com/tools">
     <!-- io.flutter.app.FlutterApplication is an android.app.Application that
          calls FlutterMain.startInitialization(this); in its onCreate method.
@@ -29,14 +29,14 @@
 
     <application
         tools:replace="android:label"
-        android:label="6amMart Delivery"
+        android:label="Clicktoget Delivery"
         android:name="${applicationName}"
         android:extractNativeLibs="true"
         android:requestLegacyExternalStorage="true"
         android:usesCleartextTraffic="true"
         android:icon="@mipmap/ic_launcher">
         <meta-data android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyCaCSJ0BZItSyXqBv8vpD1N4WBffJeKhLQ"/>
+            android:value="AIzaSyCGbGjFcUG1iG8Fa9jzWVlfY_46Jiai_kI"/>
 
         <activity
             android:name=".MainActivity"
@@ -78,7 +78,7 @@
         <!-- Don't delete the meta-data below.
              This is used by the Flutter tool to generate GeneratedPluginRegistrant.java -->
         <service
-            android:name="com.sixamtech.sixam_mart_delivery_app.BackgroundService"
+            android:name="com.clicktoget.delivery_app.BackgroundService"
             android:enabled="true"
             android:exported="false" />
         <meta-data
