--- a/Delivery man app/android/app/build.gradle
+++ b/Delivery man app/android/app/build.gradle
@@ -29,7 +29,7 @@ if (keystorePropertiesFile.exists()) {
 }
 
 android {
-    namespace "com.sixamtech.sixam_mart_delivery_app"
+    namespace "com.clicktoget.delivery_app"
     compileSdk 34
     ndkVersion flutter.ndkVersion
 
@@ -46,7 +46,7 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.sixamtech.sixam_mart_delivery_app"
+        applicationId "com.clicktoget.delivery_app"
         minSdkVersion 23
         targetSdkVersion 34
         versionCode flutterVersionCode.toInteger()
